WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109250
[V8] enum V8HiddenPropertyCreationType is not used
https://bugs.webkit.org/show_bug.cgi?id=109250
Summary
[V8] enum V8HiddenPropertyCreationType is not used
Kentaro Hara
Reported
2013-02-07 19:35:03 PST
V8HiddenPropertyCreationType is always NewSymbol. We can remove the enum.
Attachments
Patch
(2.80 KB, patch)
2013-02-07 19:36 PST
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2013-02-07 19:36:12 PST
Created
attachment 187221
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-07 21:39:02 PST
Comment on
attachment 187221
[details]
Patch Clearing flags on attachment: 187221 Committed
r142226
: <
http://trac.webkit.org/changeset/142226
>
WebKit Review Bot
Comment 3
2013-02-07 21:39:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug