[V8] enum V8HiddenPropertyCreationType is not used https://bugs.webkit.org/show_bug.cgi?id=109250

Reviewed by Adam Barth.

V8HiddenPropertyCreationType is always NewSymbol. We can remove the enum.

No tests. No change in behavior.

* bindings/v8/V8HiddenPropertyName.cpp:
(WebCore::hiddenReferenceName):
* bindings/v8/V8HiddenPropertyName.h:
(WebCore):


Canonical link: https://commits.webkit.org/127470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142226 268f45cc-cd09-0410-ab3c-d52691b4dbfc