Source/WebCore/bindings/v8/V8HiddenPropertyName.cpp
@@ -55,20 +55,13 @@ v8::Handle<v8::String> V8HiddenPropertyName::name() \
 
 V8_HIDDEN_PROPERTIES(V8_DEFINE_HIDDEN_PROPERTY);
 
-static v8::Handle<v8::String> hiddenReferenceName(const char* name, unsigned length, V8HiddenPropertyCreationType type = NewSymbol)
+static v8::Handle<v8::String> hiddenReferenceName(const char* name, unsigned length)
 {
     ASSERT(length);
     Vector<char, 64> prefixedName;
     prefixedName.append(V8_HIDDEN_PROPERTY_PREFIX, sizeof(V8_HIDDEN_PROPERTY_PREFIX) - 1);
     prefixedName.append(name, length);
-    switch (type) {
-    case NewSymbol:
-        return v8::String::NewSymbol(prefixedName.data(), static_cast<int>(prefixedName.size()));
-    case NewString:
-        return v8::String::New(prefixedName.data(), static_cast<int>(prefixedName.size()));
-    }
-    ASSERT_NOT_REACHED();
-    return v8::Handle<v8::String>();
+    return v8::String::NewSymbol(prefixedName.data(), static_cast<int>(prefixedName.size()));
 }
 
 void V8HiddenPropertyName::setNamedHiddenReference(v8::Handle<v8::Object> parent, const char* name, v8::Handle<v8::Value> child)
