Source/WebCore/bindings/v8/V8HiddenPropertyName.h
@@ -48,8 +48,6 @@ namespace WebCore {
     V(toStringString) \
     V(typedArrayHiddenCopyMethod)
 
-enum V8HiddenPropertyCreationType { NewSymbol, NewString };
-
 class V8HiddenPropertyName {
 public:
     V8HiddenPropertyName() { }
